[project]
name = "musicgen-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "audiocraft>=1.3.0",
    "fastapi>=0.115.11",
    "pydantic>=2.10.6",
    "soundfile>=0.13.1",
    "spacy==3.7.6",
    "torch==2.1.0",
    "uvicorn>=0.34.0",
]
